Clean up animations and fix button styling
- Simplified animations.css to only include hero section animations
- Removed all scroll-reveal animations and animation-timeline features
- Fixed 'View All Free Courses' button hover to match other green buttons
- Removed unnecessary animation classes from landing page
- Fixed corrupted meta description in landing page
- Maintained smooth scrolling and basic hover effects

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us - Strike</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Base styles and CSS variables -->
     <link rel="stylesheet" href="css/base.css" />
+
+    <!-- Animation styles -->
+    <link rel="stylesheet" href="css/animations.css" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/hero.css" />
     <link rel="stylesheet" href="css/footer.css" />
