--- a/course-detail.html
+++ b/course-detail.html
@@ -12,6 +12,9 @@
     <!-- Base styles and CSS variables -->
     <link rel="stylesheet" href="css/base.css" />
 
+    <!-- Animation styles -->
+    <link rel="stylesheet" href="css/animations.css" />
+
     <!-- Component styles -->
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/footer.css" />
@@ -125,7 +128,7 @@
           </div>
 
           <div class="course-hero-actions">
-            <button class="btn-hero-primary">Enroll Now - $89.99</button>
+            <button class="btn-hero-primary">Enroll Now - ₹89.99</button>
             <button class="btn-hero-secondary">Preview Course</button>
           </div>
         </div>
@@ -892,8 +895,8 @@
               <!-- Pricing Card -->
               <div class="pricing-card">
                 <div class="price-header">
-                  <div class="current-price">$89.99</div>
-                  <div class="original-price">$199.99</div>
+                  <div class="current-price">₹89.99</div>
+                  <div class="original-price">₹199.99</div>
                   <div class="discount-badge">55% OFF</div>
                 </div>
 
