--- a/landingpage.html
+++ b/landingpage.html
@@ -6,7 +6,7 @@
     <title>STRIKE - Premium Online Courses Platform</title>
     <meta
       name="description"
-      content="Transform your career with STRIKE's cutting-edge online courses from industry experts"
+      content="Transform your career with STRIKE's cutting-edge online courses. Learn from industry experts"
     />
     <meta
       name="keywords"
@@ -15,7 +15,11 @@
     <!-- Base styles          </div>
 
     -------------- -->
+    <!-- Base styles and CSS variables -->
     <link rel="stylesheet" href="css/base.css" />
+
+    <!-- Animation styles -->
+    <link rel="stylesheet" href="css/animations.css" />
 
     <!-- Component styles -->
     <link rel="stylesheet" href="css/navbar.css" />
@@ -80,7 +84,7 @@
 
     <main class="main-content">
       <!-- Hero Section -->
-      <section class="hero" id="hero">
+      <section class="hero page-section" id="hero">
         <div class="hero-container">
           <div class="hero-content">
             <h1 class="hero-title">
@@ -414,7 +418,7 @@
             <p class="free-cta-text">
               Ready to explore more? Browse our complete catalog
             </p>
-            <a href="#courses" class="btn btn-outline free-cta-btn"
+            <a href="#courses" class="btn-view-free-course"
               >View All Free Courses</a
             >
           </div>
