Rename landingpage.html to index.html for deployment
- Renamed landingpage.html to index.html for proper web hosting
- Updated all internal links and references across all HTML files
- Updated README.md to reflect new file structure
- Prepared project for GitHub Pages and other hosting platforms
- Maintained all functionality while improving deployment compatibility

--- a/course-detail.html
+++ b/course-detail.html
@@ -30,7 +30,7 @@
     <header class="header" id="header">
       <nav class="nav-container">
         <div class="nav-brand">
-          <a href="landingpage.html"
+          <a href="index.html"
             ><img src="logo.png" alt="STRIKE" class="logo-image"
           /></a>
         </div>
@@ -43,8 +43,8 @@
         />
 
         <div class="nav-menu" id="navMenu">
-          <a href="landingpage.html" class="nav-link">Home</a>
-          <a href="landingpage.html" class="nav-link">Courses</a>
+          <a href="index.html" class="nav-link">Home</a>
+          <a href="index.html" class="nav-link">Courses</a>
           <a href="about.html" class="nav-link">About</a>
           <a href="contact.html" class="nav-link">Contact</a>
           <div class="nav-actions-mobile">
@@ -88,7 +88,7 @@
       <div class="container">
         <div class="course-hero-content">
           <div class="course-breadcrumb">
-            <a href="landingpage.html">Home</a>
+            <a href="index.html">Home</a>
             <span>/</span>
             <a href="#courses">Courses</a>
             <span>/</span>
@@ -990,7 +990,7 @@
         <div class="container">
           <div class="footer-content">
             <div class="footer-brand">
-              <a href="landingpage.html" class="footer-logo">
+              <a href="index.html" class="footer-logo">
                 <img src="logo.png" alt="STRIKE Logo" />
                 <span class="footer-logo-text">STRIKE</span>
               </a>
