--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="nav-menu" id="nav-menu">
-          <a href="landingpage.html" class="nav-link">Home</a>
+          <a href="index.html" class="nav-link">Home</a>
           <a href="about.html" class="nav-link">About</a>
           <a href="contact.html" class="nav-link active">Contact</a>
         </div>
@@ -277,7 +277,7 @@
         <div class="container">
           <div class="footer-content">
             <div class="footer-brand">
-              <a href="landingpage.html" class="footer-logo">
+              <a href="index.html" class="footer-logo">
                 <img src="logo.png" alt="STRIKE Logo" />
                 <span class="footer-logo-text">STRIKE</span>
               </a>
