--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
         <div class="container">
           <div class="footer-content">
             <div class="footer-brand">
-              <a href="landingpage.html" class="footer-logo">
+              <a href="index.html" class="footer-logo">
                 <img src="logo.png" alt="STRIKE Logo" />
                 <span class="footer-logo-text">STRIKE</span>
               </a>
