--- a/contact.html
+++ b/contact.html
@@ -298,6 +298,16 @@
               <h3 class="footer-column-title">Courses</h3>
               <ul class="footer-links">
                 <li class="footer-link-item">
+                  <a href="featured-courses.html" class="footer-link"
+                    >Featured Courses</a
+                  >
+                </li>
+                <li class="footer-link-item">
+                  <a href="free-courses.html" class="footer-link"
+                    >Free Courses</a
+                  >
+                </li>
+                <li class="footer-link-item">
                   <a href="#" class="footer-link">Web Development</a>
                 </li>
                 <li class="footer-link-item">
@@ -305,12 +315,6 @@
                 </li>
                 <li class="footer-link-item">
                   <a href="#" class="footer-link">Mobile Development</a>
-                </li>
-                <li class="footer-link-item">
-                  <a href="#" class="footer-link">UI/UX Design</a>
-                </li>
-                <li class="footer-link-item">
-                  <a href="#" class="footer-link">DevOps & Cloud</a>
                 </li>
               </ul>
             </div>
