--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         />
 
         <div class="nav-menu" id="navMenu">
-          <a href="#courses" class="nav-link">Courses</a>
+          <a href="#featured" class="nav-link">Courses</a>
           <a href="about.html" class="nav-link">About</a>
           <a href="contact.html" class="nav-link">Contact</a>
           <div class="nav-actions-mobile">
@@ -97,7 +97,7 @@
               careers with cutting-edge skills.
             </p>
             <div class="hero-actions">
-              <a href="#courses" class="btn btn-primary pulse">
+              <a href="#featured" class="btn btn-primary pulse">
                 Explore Courses
               </a>
             </div>
@@ -287,7 +287,7 @@
               with our expert-designed courses.
             </p>
             <div class="cta-actions">
-              <a href="#courses" class="btn btn-primary cta-btn">
+              <a href="featured-courses.html" class="btn btn-primary cta-btn">
                 Explore All Courses
               </a>
             </div>
@@ -418,7 +418,7 @@
             <p class="free-cta-text">
               Ready to explore more? Browse our complete catalog
             </p>
-            <a href="#courses" class="btn-view-free-course"
+            <a href="free-courses.html" class="btn-view-free-course"
               >View All Free Courses</a
             >
           </div>
@@ -564,6 +564,16 @@
               <h3 class="footer-column-title">Courses</h3>
               <ul class="footer-links">
                 <li class="footer-link-item">
+                  <a href="featured-courses.html" class="footer-link"
+                    >Featured Courses</a
+                  >
+                </li>
+                <li class="footer-link-item">
+                  <a href="free-courses.html" class="footer-link"
+                    >Free Courses</a
+                  >
+                </li>
+                <li class="footer-link-item">
                   <a href="#" class="footer-link">Web Development</a>
                 </li>
                 <li class="footer-link-item">
@@ -571,12 +581,6 @@
                 </li>
                 <li class="footer-link-item">
                   <a href="#" class="footer-link">Mobile Development</a>
-                </li>
-                <li class="footer-link-item">
-                  <a href="#" class="footer-link">UI/UX Design</a>
-                </li>
-                <li class="footer-link-item">
-                  <a href="#" class="footer-link">DevOps & Cloud</a>
                 </li>
               </ul>
             </div>
